# axtend

./: .gitignore  .prettierignore  CONTRIBUTIONS.md  Cargo.toml  PERF.md  README.md  RELEASE.md  Readme.md  bug-bounty.md  hello.json  run.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  prepare-binary.yml  publish-binary.yml  publish-docker.yml  publish-runtime.yml  release.yml  version-bump.yml
axtend-types-bundle/: README.md  generateJSON.ts  index.ts
benchmarking/: frame-weight-template.hbs
client/evm-tracing/: Cargo.toml
client/rpc-core/debug/: Cargo.toml
client/rpc-core/trace/: Cargo.toml
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/types/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/debug/src/: lib.rs
client/rpc/trace/: Cargo.toml
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
client/rpc/txpool/src/: lib.rs
core-primitives/: Cargo.toml
docker/: axia-relay.Dockerfile  axtend-release.Dockerfile  axtend.Dockerfile  moonbase-allychain.Dockerfile  moonbeam-release.Dockerfile  moonbeam.Dockerfile  polkadot-relay.Dockerfile
moonbeam-types-bundle/: README.md  index.ts
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli-opt/: Cargo.toml
node/cli-opt/src/: account_key.rs
node/cli/src/: cli.rs  command.rs
node/perf-test/: Cargo.toml
node/perf-test/src/: command.rs  lib.rs  txn_signer.rs
node/service/: Cargo.toml
node/service/src/: client.rs  lib.rs  rpc.rs
node/service/src/chain_spec/: axtend.rs  fake_spec.rs  mod.rs  moonbase.rs  moonbeam.rs  moonriver.rs  test_spec.rs
node/service/src/rpc/: tracing.rs
node/src/: main.rs  tests.rs
pallets/allychain-staking/: Cargo.toml  README.md
pallets/allychain-staking/parachain-staking/: Cargo.toml
pallets/allychain-staking/parachain-staking/src/: benchmarks.rs  lib.rs  tests.rs  weights.rs
pallets/allychain-staking/src/: benchmarks.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  weights.rs
pallets/asset-manager/: Cargo.toml
pallets/author-mapping/: Cargo.toml
pallets/ethereum-chain-id/: Cargo.toml
pallets/maintenance-mode/: Cargo.toml
pallets/maintenance-mode/src/: lib.rs  mock.rs
pallets/migrations/: Cargo.toml
pallets/parachain-staking/: Cargo.toml
pallets/proxy-genesis-companion/: Cargo.toml
pallets/xcm-transactor/: Cargo.toml
pallets/xcm-transactor/src/: lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
precompiles/allychain-staking/: Cargo.toml  StakingInterface.sol
precompiles/allychain-staking/parachain-staking/: Cargo.toml
precompiles/allychain-staking/parachain-staking/src/: mock.rs
precompiles/allychain-staking/src/: lib.rs  mock.rs  tests.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/author-mapping/: Cargo.toml
precompiles/author-mapping/src/: lib.rs  mock.rs
precompiles/balances-erc20/: Cargo.toml
precompiles/crowdloan-rewards/: Cargo.toml
precompiles/pallet-democracy/: Cargo.toml
precompiles/pallet-democracy/src/: lib.rs  mock.rs  tests.rs
precompiles/parachain-staking/: Cargo.toml
precompiles/relay-encoder/: Cargo.toml
precompiles/relay-encoder/src/: mock.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/src/: lib.rs  tests.rs
precompiles/utils/src/data/: xcm.rs
precompiles/xcm_transactor/: Cargo.toml
precompiles/xcm_transactor/src/: lib.rs  mock.rs
precompiles/xtokens/: Cargo.toml
precompiles/xtokens/src/: mock.rs  tests.rs
primitives/account/: Cargo.toml
primitives/ext/: Cargo.toml
primitives/xcm/: Cargo.toml
runtime/axtend/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/common/src/: apis.rs  lib.rs  migrations.rs
runtime/evm_tracer/: Cargo.toml
runtime/moonbase/: Cargo.toml
runtime/moonbeam/: Cargo.toml
runtime/moonriver/: Cargo.toml  build.rs
runtime/relay-encoder/: Cargo.toml
runtime/relay-encoder/src/: alphanet.rs  axctest.rs  axia.rs  kusama.rs  lib.rs  polkadot.rs  westend.rs
scripts/: README.md  _init_var.sh  build-alphanet-relay-image.sh  create-axlib-fork.sh  create-substrate-fork.sh  embed-specs.sh  generate-allychain-specs.sh  generate-parachain-specs.sh  generate-relay-specs.sh  generate-runtimes.sh  generate-session-keys.sh  get-alphanet-relay-image.sh  register-allychain-local.sh  register-allychain.sh  register-parachain-local.sh  register-parachain.sh  run-alphanet-allychain.sh  run-alphanet-parachain.sh  run-betanet-local.sh  run-moonbase-dev.sh  run-rococo-local.sh  run_benchmarks.sh
specs/: README.md
specs/alphanet/: allychain-embedded-specs-v8.json  parachain-embedded-specs-v8.json
specs/axtend/: allychain-embedded-specs.json
specs/moonbeam/: allychain-embedded-specs.json  parachain-embedded-specs.json
specs/moonriver/: allychain-embedded-specs.json  parachain-embedded-specs.json
tests/: README.md  package-lock.json  package.json
tests/contracts/: sources.ts
tests/para-tests-no-ci/: test-xcm-para.ts
tests/tests/: test-allychain-bond.ts  test-asset-manager.ts  test-assets-pallet.ts  test-assets-sufficients.ts  test-author-mapping.ts  test-axia-api.ts  test-bn-128-bounds.ts  test-crowdloan.ts  test-deal-fees.ts  test-democracy.ts  test-existential-deposit.ts  test-ext-eth-data.ts  test-fork-chain.ts  test-mock-dmp.ts  test-mock-hrmp.ts  test-pallet-evm-transfer.ts  test-pallet-maintenance-mode.ts  test-polkadot-api.ts  test-staking.ts  test-sudo.ts  test-treasury-proposal.ts  test-xcm-transactor.ts
tests/tracing-tests/: test-trace.ts
tests/util/: axlib-rpc.ts  block.ts  constants.ts  dev-node.ts  governance.ts  para-node.ts  providers.ts  setup-dev-tests.ts  setup-para-tests.ts  substrate-rpc.ts  transactions.ts
tools/: README.md  launch.ts  package-lock.json  package.json
tools/github/: generate-release-body.ts  generate-runtimes-body.ts  list-pr-labels.ts  print-version-bump-info.ts
tools/test-scripts/: test-alpha.ts  test-staking.ts  test-wrong-contract-address.ts
typescript-api/: README.md  package-lock.json  package.json
(+143 files in other folders)
