[workspace]
exclude = ["bin/utils/moonkey"]
members = [
	"bin/utils/moonkey",
	"client/rpc/finality",
	"client/rpc/manual-xcm",
	"node",
	"node/cli",
	"node/service",
	"pallets/maintenance-mode",
	"pallets/migrations",
	"pallets/proxy-genesis-companion",
	"precompiles/utils/macro",
	"runtime/moonbase",
	"runtime/axtend",
	"runtime/moonriver",
]

[patch.crates-io]
ethereum = { git = "https://github.com/axtend/ethereum", branch = "42ee428" }
evm = { git = "https://github.com/axtend/evm", branch = "7deff47" }
evm-gasometer = { git = "https://github.com/axtend/evm", branch = "7deff47" }
evm-runtime = { git = "https://github.com/axtend/evm", branch = "7deff47" }

[profile.release]
panic = "unwind"
