[package]
name = "moonbeam-core-primitives"
authors = ["PureStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.1"

[dependencies]
account = { path = "../primitives/account", default-features = false }
fp-self-contained = { git = "https://github.com/axtend/frontier", branch = "2da9bb8", default-features = false }
sp-core = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }

[features]
default = ["std"]
std = ["account/std", "fp-self-contained/std", "sp-core/std", "sp-runtime/std"]
