[package]
name = "axtend"
authors = ["PureStake"]
description = "Moonbeam Collator"
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
version = "0.12.3"

[[bin]]
name = 'axtend'
path = 'src/main.rs'

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }

axtend-cli = { path = "cli", default-features = false }
axtend-service = { path = "service", default-features = false }

[dev-dependencies]
assert_cmd = "0.12"
hex = "0.4.3"
nix = "0.17"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2.0"

# Benchmarking
pallet-xcm = { git = "https://github.com/axtend/axia", branch = "axia" }
xcm-builder = { git = "https://github.com/axtend/axia", branch = "axia" }

[features]
default = ["moonbase-native", "axtend-native", "moonriver-native"]

kusama-native = ["axtend-service/kusama-native"]
rococo-native = ["axtend-service/rococo-native"]
westend-native = [
	"axtend-cli/westend-native",
	"axtend-service/westend-native",
]

moonbase-native = [
	"axtend-cli/moonbase-native",
	"axtend-service/moonbase-native",
]
axtend-native = [
	"axtend-cli/axtend-native",
	"axtend-service/axtend-native",
]
moonriver-native = [
	"axtend-cli/moonriver-native",
	"axtend-service/moonriver-native",
]

test-spec = []

runtime-benchmarks = [
	"axtend-cli/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]

moonbase-runtime-benchmarks = [
	"axtend-cli/moonbase-runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
