[package]
name = "moonbeam"
authors = ["PureStake"]
description = "Axtend Collator"
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
version = "0.12.3"

[[bin]]
name = 'moonbeam'
path = 'src/main.rs'

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }

moonbeam-cli = { path = "cli", default-features = false }
moonbeam-service = { path = "service", default-features = false }

[dev-dependencies]
assert_cmd = "0.12"
hex = "0.4.3"
nix = "0.17"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2.0"

# Benchmarking
pallet-xcm = { git = "https://github.com/axtend/axia", branch = "axia" }
xcm-builder = { git = "https://github.com/axtend/axia", branch = "axia" }

[features]
default = ["moonbase-native", "moonbeam-native", "moonriver-native"]

axctest-native = ["moonbeam-service/axctest-native"]
betanet-native = ["moonbeam-service/betanet-native"]
alphanet-native = [
	"moonbeam-cli/alphanet-native",
	"moonbeam-service/alphanet-native",
]

moonbase-native = [
	"moonbeam-cli/moonbase-native",
	"moonbeam-service/moonbase-native",
]
moonbeam-native = [
	"moonbeam-cli/moonbeam-native",
	"moonbeam-service/moonbeam-native",
]
moonriver-native = [
	"moonbeam-cli/moonriver-native",
	"moonbeam-service/moonriver-native",
]

test-spec = []

runtime-benchmarks = [
	"moonbeam-cli/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]

moonbase-runtime-benchmarks = [
	"moonbeam-cli/moonbase-runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
