[package]
name = "axtend-cli"
authors = ["PureStake"]
edition = "2018"
version = "0.21.0"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
log = "0.4.8"
parity-scale-codec = "2.2"

# Axtend
cli-opt = { package = "axtend-cli-opt", path = "../cli-opt", default-features = false }
perf-test = { path = "../perf-test" }
service = { package = "axtend-service", path = "../service", default-features = false }

# Axlib
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
try-runtime-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d", optional = true }

# Cumulus / Nimbus
cumulus-client-cli = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-client-service = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
nimbus-primitives = { git = "https://github.com/axtend/nimbus", branch = "5f92d14" }

# Axia
axia-cli = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = [
	"moonbase-native",
	"axtend-native",
	"moonriver-native",
	"wasmtime",
	"alphanet-native",
]

alphanet-native = ["axia-service/alphanet-native"]

moonbase-native = ["service/moonbase-native", "alphanet-native"]
axtend-native = ["service/axtend-native"]
moonriver-native = ["service/moonriver-native"]

moonbase-runtime-benchmarks = ["service/moonbase-runtime-benchmarks"]
runtime-benchmarks = ["service/runtime-benchmarks"]
try-runtime = ["service/try-runtime", "try-runtime-cli"]
wasmtime = ["sc-cli/wasmtime"]
