[package]
name = "perf-test"
authors = ["PureStake"]
description = "Moonbeam Performance Tests"
edition = "2018"
version = "0.1.0"

[dependencies]
async-io = "1.3"
clap = { version = "3.1", features = ["derive"] }
cli-table = "0.4"
futures = { version = "0.3.1", features = ["compat"] }
hex = "0.4.3"
libsecp256k1 = { version = "0.5" }
log = "0.4.8"
num_cpus = "1.13.0"
psutil = "3.2.1"
raw-cpuid = "10.2.0"
rlp = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.8" }

# Moonbeam

cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt", default-features = false }
# TODO: handle different runtime builds
moonbase-runtime = { path = "../../runtime/moonbase" }
service = { package = "moonbeam-service", path = "../service", default-features = false }

# Substrate
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-db = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus-manual-seal = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-externalities = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-state-machine = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Frontier
ethereum = { version = "0.11.1" }
fc-consensus = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fc-rpc = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fp-evm = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fp-rpc = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
pallet-ethereum = { git = "https://github.com/axtend/frontier", branch = "2be428c" }

# Cumulus / Nimbus
cumulus-primitives-parachain-inherent = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
nimbus-primitives = { git = "https://github.com/axtend/nimbus", branch = "5f92d14" }
