[package]
name = "moonbeam-service"
authors = ["PureStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.18.1"

[dependencies]
ansi_term = "0.12.1"
async-io = "1.3"
async-trait = "0.1.42"
derive_more = "0.99"
exit-future = "0.1.4"
flume = "0.10.9"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
libsecp256k1 = { version = "0.6", features = ["hmac"] }
log = "0.4"
parking_lot = "0.9.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.9", default-features = false }
structopt = "0.3"
tiny-bip39 = { version = "0.8", default-features = false }
tiny-hderive = { version = "0.3.0", default-features = false }
tokio = { version = "1.12.0", features = ["macros", "sync"] }
trie-root = "0.15.2"

# Moonbeam
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt" }
manual-xcm-rpc = { path = "../../client/rpc/manual-xcm" }
moonbeam-core-primitives = { path = "../../core-primitives" }
moonbeam-primitives-ext = { path = "../../primitives/ext" }
moonbeam-rpc-debug = { path = "../../client/rpc/debug" }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
moonbeam-rpc-trace = { path = "../../client/rpc/trace" }
moonbeam-rpc-txpool = { path = "../../client/rpc/txpool" }
parachain-staking = { path = "../../pallets/parachain-staking" }

# Moonbeam runtimes
moonbase-runtime = { path = "../../runtime/moonbase", optional = true }
moonbeam-runtime = { path = "../../runtime/moonbeam", optional = true }
moonriver-runtime = { path = "../../runtime/moonriver", optional = true }

# Substrate
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
parity-scale-codec = "2.2"
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "e09e70a", features = [
	"wasmtime",
] }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-client-db = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-consensus-manual-seal = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "e09e70a", features = [
	"wasmtime",
] }
sc-finality-grandpa = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-informant = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-rpc-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "e09e70a", features = [
	"test-helpers",
] }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-offchain = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-storage = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-trie = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
substrate-frame-rpc-system = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }

# Frontier
ethereum-primitives = { package = "ethereum", version = "0.9.0", default-features = false, features = [
	"with-codec",
] }
fc-consensus = { git = "https://github.com/axtend/frontier", branch = "2da9bb8" }
fc-db = { git = "https://github.com/axtend/frontier", branch = "2da9bb8" }
fc-mapping-sync = { git = "https://github.com/axtend/frontier", branch = "2da9bb8" }
fc-rpc = { git = "https://github.com/axtend/frontier", branch = "2da9bb8", features = [
	"rpc_binary_search_estimate",
] }
fc-rpc-core = { git = "https://github.com/axtend/frontier", branch = "2da9bb8" }
fp-consensus = { git = "https://github.com/axtend/frontier", branch = "2da9bb8" }
fp-rpc = { git = "https://github.com/axtend/frontier", branch = "2da9bb8" }
pallet-ethereum = { git = "https://github.com/axtend/frontier", branch = "2da9bb8" }

# Cumulus / Nimbus
cumulus-client-cli = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-collator = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-network = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-service = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
nimbus-consensus = { git = "https://github.com/axtend/nimbus", branch = "faabf10" }
# TODO we should be able to depend only on the primitives crate once we move the inherent data provider there.
nimbus-primitives = { git = "https://github.com/axtend/nimbus", branch = "faabf10" }
pallet-author-inherent = { git = "https://github.com/axtend/nimbus", branch = "faabf10" }

# Polkadot
polkadot-cli = { git = "https://github.com/axtend/axia", branch = "415ce0d" }
polkadot-parachain = { git = "https://github.com/axtend/axia", branch = "415ce0d" }
polkadot-primitives = { git = "https://github.com/axtend/axia", branch = "415ce0d" }
polkadot-service = { git = "https://github.com/axtend/axia", branch = "415ce0d" }
xcm = { git = "https://github.com/axtend/axia", branch = "415ce0d", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"

# Polkadot dev-dependencies
polkadot-runtime-common = { git = "https://github.com/axtend/axia", branch = "415ce0d" }

# Substrate dev-dependencies
pallet-sudo = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
substrate-test-client = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
substrate-test-runtime-client = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }

[features]
default = [
	"kusama-native",
	"moonbase-native",
	"moonbeam-native",
	"moonriver-native",
	"rococo-native",
	"westend-native",
]

kusama-native = ["polkadot-cli/kusama-native", "polkadot-service/kusama-native"]
rococo-native = ["polkadot-cli/rococo-native", "polkadot-service/rococo-native"]
westend-native = [
	"polkadot-cli/westend-native",
	"polkadot-service/westend-native",
]

moonbase-native = ["moonbase-runtime", "westend-native"]
moonbeam-native = ["moonbeam-runtime"]
moonriver-native = ["moonriver-runtime"]

moonbase-native-tracing = ["moonbase-native", "moonbase-runtime/evm-tracing"]

test-spec = []

runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/runtime-benchmarks",
	"moonbeam-native",
	"moonbeam-runtime/runtime-benchmarks",
	"moonriver-native",
	"moonriver-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]


moonbase-runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/moonbase-runtime-benchmarks",
	"moonbase-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]

try-runtime = ["moonbase-runtime", "moonbase-runtime/try-runtime"]
