[package]
name = "axtend-service"
authors = ["PureStake"]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
version = "0.21.0"

[dependencies]
ansi_term = "0.12.1"
async-io = "1.3"
async-trait = "0.1.42"
derive_more = "0.99"
exit-future = "0.1.4"
flume = "0.10.9"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
libsecp256k1 = { version = "0.6", features = ["hmac"] }
log = "0.4"
parking_lot = "0.9.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.9", default-features = false }
structopt = "0.3"
tiny-bip39 = { version = "0.8", default-features = false }
tiny-hderive = { version = "0.3.0", default-features = false }
tokio = { version = "1.13.0", features = ["macros", "sync"] }
trie-root = "0.15.2"

# Axtend
cli-opt = { package = "axtend-cli-opt", path = "../cli-opt" }
manual-xcm-rpc = { path = "../../client/rpc/manual-xcm" }
axtend-core-primitives = { path = "../../core-primitives" }
axtend-finality-rpc = { path = "../../client/rpc/finality" }
axtend-primitives-ext = { path = "../../primitives/ext" }
axtend-rpc-debug = { path = "../../client/rpc/debug" }
axtend-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
axtend-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
axtend-rpc-trace = { path = "../../client/rpc/trace" }
axtend-rpc-txpool = { path = "../../client/rpc/txpool" }
allychain-staking = { path = "../../pallets/allychain-staking" }

# Axtend runtimes
moonbase-runtime = { path = "../../runtime/moonbase", optional = true }
axtend-runtime = { path = "../../runtime/axtend", optional = true }
moonriver-runtime = { path = "../../runtime/moonriver", optional = true }

# Axlib
frame-system-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
parity-scale-codec = "2.2"
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d", features = [
	"wasmtime",
] }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-db = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus-manual-seal = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "c92f69d", features = [
	"wasmtime",
] }
sc-finality-grandpa = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-informant = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-offchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-storage = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-trie = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-frame-rpc-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Frontier
fc-consensus = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fc-db = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fc-mapping-sync = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fc-rpc = { git = "https://github.com/axtend/frontier", branch = "2be428c", features = [
	"rpc_binary_search_estimate",
] }
fc-rpc-core = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fp-consensus = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fp-rpc = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fp-storage = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
pallet-ethereum = { git = "https://github.com/axtend/frontier", branch = "2be428c" }

# Cumulus / Nimbus
cumulus-client-cli = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-client-collator = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-client-consensus-common = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-client-network = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-client-service = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-relay-chain-interface = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-relay-chain-local = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
nimbus-consensus = { git = "https://github.com/axtend/nimbus", branch = "5f92d14" }
# TODO we should be able to depend only on the primitives crate once we move the inherent data provider there.
nimbus-primitives = { git = "https://github.com/axtend/nimbus", branch = "5f92d14" }
pallet-author-inherent = { git = "https://github.com/axtend/nimbus", branch = "5f92d14" }

# Axia
axia-cli = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"

# Axia dev-dependencies
axia-runtime-common = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

# Axlib dev-dependencies
pallet-sudo = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-test-client = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-test-runtime-client = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = [
	"axctest-native",
	"moonbase-native",
	"axtend-native",
	"moonriver-native",
	"betanet-native",
	"alphanet-native",
]

axctest-native = ["axia-cli/axctest-native", "axia-service/axctest-native"]
betanet-native = ["axia-cli/betanet-native", "axia-service/betanet-native"]
alphanet-native = [
	"axia-cli/alphanet-native",
	"axia-service/alphanet-native",
]

moonbase-native = ["moonbase-runtime", "alphanet-native"]
axtend-native = ["axtend-runtime"]
moonriver-native = ["moonriver-runtime"]

test-spec = []

runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/runtime-benchmarks",
	"axtend-native",
	"axtend-runtime/runtime-benchmarks",
	"moonriver-native",
	"moonriver-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]


moonbase-runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/moonbase-runtime-benchmarks",
	"moonbase-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]

try-runtime = ["moonbase-runtime", "moonbase-runtime/try-runtime"]
