[package]
name = "pallet-maintenance-mode"
authors = ["PureStake"]
description = "Puts a FRAME-based runtime into maintenance mode where restricted interactions are allowed."
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"

# Axlib
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
parity-scale-codec = { version = "2.2", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }

cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff", optional = true, default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["std", "xcm-support"]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
xcm-support = ["cumulus-primitives-core"]
