[package]
name = "pallet-proxy-genesis-companion"
authors = ["PureStake"]
description = "A simple pallet that expands pallet-proxy with a genesis configuration"
edition = "2018"
version = "0.1.0"

[dependencies]
frame-support = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
pallet-proxy = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
parity-scale-codec = { version = "2.2", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }

[dev-dependencies]
serde = "1.0.124"

pallet-balances = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"scale-info/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
