[package]
name = "pallet-proxy-genesis-companion"
authors = ["PureStake"]
description = "A simple pallet that expands pallet-proxy with a genesis configuration"
edition = "2018"
version = "0.1.0"

[dependencies]
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
pallet-proxy = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
parity-scale-codec = { version = "2.2", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }

[dev-dependencies]
serde = "1.0.124"

pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"scale-info/std",
	"sp-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
